<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".PasswordActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass_description"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/pad4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="0"
            android:layout_row="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="1"
            android:layout_row="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="2"
            android:layout_row="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="0"
            android:layout_row="2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="1"
            android:layout_row="2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="2"
            android:layout_row="2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_3" />

        <Button
            android:id="@+id/ok"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="2"
            android:layout_row="3"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="1"
            android:layout_row="3"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="addKey"
            android:text="@string/_0" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="80dp"
            android:layout_height="56dp"
            android:layout_column="0"
            android:layout_row="3"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:onClick="addKey"
            android:padding="@dimen/pad16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>